nav overflow issue for mobile solved

--- a/src/index.css
+++ b/src/index.css
@@ -729,3 +729,15 @@ font-size:20px;
 }
 
 }
+
+@media (max-width:700px){
+
+.hero-left h1{
+font-size:32px;
+}
+
+.hero-left h2{
+font-size:24px;
+}
+
+}
